# messenger

./: CMakeLists.txt  chat_history.db  client_2.cpp  login.db  messenger.db  password_reset.db  server.crt  server.key  unsent_messages.db
app_fold/: README.md  pubspec.yaml
app_fold/android/app/: build.gradle.kts
app_fold/android/app/src/main/: AndroidManifest.xml
app_fold/android/app/src/main/kotlin/com/example/app_fold/: MainActivity.kt
app_fold/ios/Runner/: Info.plist
app_fold/ios/Runner.xcodeproj/: project.pbxproj
app_fold/lib/: main.dart
app_fold/lib/ffi/: RecorderService.dart  login_screen.dart  messenger_controller.dart  messenger_ffi.dart  register_screen.dart
app_fold/linux/: CMakeLists.txt  pubspec.yaml
app_fold/linux/native_client/: CMakeLists.txt  client.cpp  client.hpp  messenger_client_api.cpp
app_fold/linux/runner/: my_application.cc
app_fold/macos/Runner.xcodeproj/: project.pbxproj
app_fold/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app_fold/macos/Runner/Configs/: AppInfo.xcconfig
app_fold/test/: widget_test.dart
app_fold/web/: index.html  manifest.json
app_fold/windows/: CMakeLists.txt
app_fold/windows/runner/: Runner.rc  main.cpp
src/: server.cpp
